browser and url needs to be changed

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
-browser = chrome
-url = http://zero.webappsecurity.com/
+browser = safari
+url = http://vytrack.com/
 
 #CREDENTIALS
 user_name = username
